--- a/styles.css
+++ b/styles.css
@@ -1,107 +1,130 @@
-*{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: "Poppins", sans-serif;
-}
-body{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+  }
+  body {
     scrollbar-width: 2px;
     scroll-behavior: smooth;
-}
-a{
+  }
+  a {
     text-decoration: none;
     color: inherit;
-}
-
-.extended{
+  }
+  .navbar {
+    z-index: 1000;
+  }
+  .extended,
+  .ex2 {
+    z-index: 11;
+    background: linear-gradient(109.6deg, rgba(0, 0, 0, 0.93) 11.2%, rgb(63, 61, 61) 78.9%);
+  }
+  .extended {
     width: 100vw; /* Make the dropdown menu full width */
     left: -198px !important; /* Align it to the left of the viewport */
     right: 0 !important; /* Ensure it stretches to the right */
-}
-.grid {
+  }
+  .grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1.7fr;
     gap: 10px;
     padding: 20px;
     background: linear-gradient(109.6deg, rgba(0, 0, 0, 0.93) 11.2%, rgb(63, 61, 61) 78.9%);
     color: whitesmoke;
-}
-.gr2{
+  }
+  .gr2 {
     grid-template-columns: 1fr 1fr 1.7fr;
-}
-.trd-ul{
+  }
+  .trd-ul {
     background: linear-gradient(109.6deg, rgba(0, 0, 0, 0.93) 11.2%, rgb(63, 61, 61) 78.9%);
     color: whitesmoke;
     width: 450px;
-}
-.trd-ul p{
+  }
+  .trd-ul p {
     text-align: start;
     margin-left: 12px;
-}
-hr {
+  }
+  hr {
     color: white;
-}
-.items {  
+  }
+  .items {
     padding: 20px;
-}
-.item-img{
+  }
+  .item-img {
     border-radius: 12px;
     background: radial-gradient(circle at 10% 20%, rgb(0, 0, 0) 0%, rgb(64, 64, 64) 90.2%);
     color: white;
     margin: 0;
     padding: 12px;
-}
-.bgcs{
+  }
+  .bgcs {
     background: linear-gradient(109.6deg, rgba(0, 0, 0, 0.93) 11.2%, rgb(63, 61, 61) 78.9%);
     height: 160px;
     width: 100px;
-}
-.bgcs li{
+    z-index: 11;
+  }
+  .bgcs li {
     margin-top: 12px;
     margin-left: 6px;
-}
-.ex2{
+  }
+  .ex2 {
     left: -315px !important;
     width: 100vw; /* Make the dropdown menu full width */
-    right: 300px !important; 
-}
-.parent-img{
+    right: 300px !important;
+  }
+  .parent-img {
     width: 100%;
     object-fit: contain;
-}
-.parent-img img{
+  }
+  .parent-img img {
     width: 100%;
-}
-.child-banner{
+  }
+  .child-banner {
     width: 50%;
     position: absolute;
     left: 0;
     top: 190px;
     color: whitesmoke;
     margin-left: 38px;
-}
-.child-banner h1{
+    z-index: 1;
+  }
+  .child-banner h1 {
     font-size: 50px;
     letter-spacing: 2px;
-}
-@media screen and (max-width: 768px) {
-    .extended{
-        left: 0;
-        right: 210px;
-        width: 85%;
+  }
+  @media screen and (max-width: 768px) {
+    .extended {
+      left: 0;
+      right: 210px;
+      width: 85%;
     }
-    .grid{
-        display: flex;
-        flex-direction: column;
+    .grid {
+      display: flex;
+      flex-direction: column;
     }
-    .parent-img{
-        height: 100vh;
-        width: 100%;
+    .parent-img {
+      height: 100vh;
+      width: 100%;
     }
-    .parent-img img{
-        width: 100%;
-        height: 100%;
-        object-fit: none;
+    .parent-img img {
+      width: 100%;
+      height: 100%;
+      object-fit: none;
     }
-    
-}
+    .child-banner {
+      top: 300px;
+    }
+    .child-banner h1 {
+      font-size: 30px;
+      letter-spacing: 2px;
+    }
+  }
+  @media screen and (max-width: 480px) {
+    .child-banner h1 {
+      font-size: 20px;
+    }
+    .child-banner p {
+      font-size: 14px;
+    }
+  }
