--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,43 @@
     font-size: 50px;
     letter-spacing: 2px;
   }
+  .border-left-only {
+    border-left: 2px solid darkblue;
+    margin-left: 12px;
+  }
+ 
+  
+  .card {
+    width: 300px;
+    height: 200px;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+  }
+  
+  .card:hover {
+    transform: rotateY(180deg);
+  }
+  
+  .card-front,
+  .card-back {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden; /* Hide the back face */
+  }
+  
+  .card-front {
+    background-color: #fff; /* Customize front face */
+  }
+  
+  .card-back {
+    background-color: #f1f1f1; /* Customize back face */
+    transform: rotateY(180deg); /* Rotate back face */
+  }
+  
+/* todo-fix card hover issues */
+
   @media screen and (max-width: 768px) {
     .extended {
       left: 0;
@@ -119,6 +156,22 @@
       font-size: 30px;
       letter-spacing: 2px;
     }
+    .extended,
+  .ex2 {
+    width: 100%;
+  }
+  .extended .ex2 > div{
+    width: 100%;
+  }
+  .trd-ul{
+    width: 150px;
+  }
+  .card-container{
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+  }
+ 
   }
   @media screen and (max-width: 480px) {
     .child-banner h1 {
