--- a/styles.css
+++ b/styles.css
@@ -97,40 +97,15 @@
     border-left: 2px solid darkblue;
     margin-left: 12px;
   }
- 
-  
-  .card {
-    width: 300px;
-    height: 200px;
-    position: relative;
-    transform-style: preserve-3d;
-    transition: transform 0.6s;
-  }
-  
-  .card:hover {
-    transform: rotateY(180deg);
-  }
-  
-  .card-front,
-  .card-back {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    backface-visibility: hidden; /* Hide the back face */
-  }
-  
-  .card-front {
-    background-color: #fff; /* Customize front face */
-  }
-  
-  .card-back {
-    background-color: #f1f1f1; /* Customize back face */
-    transform: rotateY(180deg); /* Rotate back face */
-  }
-  
+
+.card {
+  padding: 18px;
+  margin-bottom: 12px;
+}
 /* todo-fix card hover issues */
 
   @media screen and (max-width: 768px) {
+  
     .extended {
       left: 0;
       right: 210px;
