--- a/styles.css
+++ b/styles.css
@@ -260,7 +260,7 @@ hr {
         justify-content: center;
     }
     .ai{
-      padding-top: 200px;
+      padding-top: 500px;
     }
     .sec{
       width: 100%;
@@ -275,6 +275,7 @@ hr {
    display: flex;
    flex-direction: column;
   margin-top: 12px;
+  padding: 6px;
     }
 }
 
