--- a/styles.css
+++ b/styles.css
@@ -205,11 +205,11 @@ hr {
         margin-left: 80px;
     }
     iframe{
-        width: 300px;
-        height: 300px;
+        width: 340px;
+        height: 340px;
     }
     .cards.large img{
-        width: 250px;
+        width: 200px;
       height: 250px;
     }
     .cards.large .cards-cn{
@@ -284,6 +284,11 @@ hr {
    flex-direction: column;
   margin-top: 12px;
   padding: 6px;
+    }
+    .flex{
+        display: flex;
+        width: 100%;
+        flex-direction: column;
     }
 }
 
